; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_intr_machdep.c_intr_remove_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_intr_machdep.c_intr_remove_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intsrc = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.intsrc*)*, i32 (%struct.intsrc*, i32)* }

@intrsrc_lock = common dso_local global i32 0, align 4
@PIC_NO_EOI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @intr_remove_handler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.intsrc*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call %struct.intsrc* @intr_handler_source(i8* %5)
  store %struct.intsrc* %6, %struct.intsrc** %3, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @intr_event_remove_handler(i8* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %41

11:                                               ; preds = %1
  %12 = call i32 @sx_xlock(i32* @intrsrc_lock)
  %13 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %14 = getelementptr inbounds %struct.intsrc, %struct.intsrc* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, -1
  store i64 %16, i64* %14, align 8
  %17 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %18 = getelementptr inbounds %struct.intsrc, %struct.intsrc* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %37

21:                                               ; preds = %11
  %22 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %23 = getelementptr inbounds %struct.intsrc, %struct.intsrc* %22, i32 0, i32 1
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i32 (%struct.intsrc*, i32)*, i32 (%struct.intsrc*, i32)** %25, align 8
  %27 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %28 = load i32, i32* @PIC_NO_EOI, align 4
  %29 = call i32 %26(%struct.intsrc* %27, i32 %28)
  %30 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %31 = getelementptr inbounds %struct.intsrc, %struct.intsrc* %30, i32 0, i32 1
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i32 (%struct.intsrc*)*, i32 (%struct.intsrc*)** %33, align 8
  %35 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %36 = call i32 %34(%struct.intsrc* %35)
  br label %37

37:                                               ; preds = %21, %11
  %38 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %39 = call i32 @intrcnt_updatename(%struct.intsrc* %38)
  %40 = call i32 @sx_xunlock(i32* @intrsrc_lock)
  br label %41

41:                                               ; preds = %37, %1
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local %struct.intsrc* @intr_handler_source(i8*) #1

declare dso_local i32 @intr_event_remove_handler(i8*) #1

declare dso_local i32 @sx_xlock(i32*) #1

declare dso_local i32 @intrcnt_updatename(%struct.intsrc*) #1

declare dso_local i32 @sx_xunlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
